<resources>
    <string name="app_name">翻转课堂</string>
    <string name="app_title">智慧课堂系统</string>
    <string name="page_teacher_one">备课</string>
    <string name="page_teacher_two">资源</string>
    <string name="page_teacher_three">学情</string>
    <string name="setting_language_auto">跟随系统</string>
    <string name="setting_language_cn">简体中文</string>
    <string name="setting_language_en">English</string>
    <string name="hint_input_account">请输入用户名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="sign_button">登录</string>
    <string name="login_title">前海翻转课堂云平台</string>
    <string name="upload_from_local_title">从本地上传</string>
    <string name="menu_import">导入</string>
    <string name="menu_add">增加</string>
    <string name="menu_modify">修改</string>
    <string name="menu_save">存储</string>
    <string name="menu_send">分发</string>
    <string name="menu_revoke">撤回</string>
    <string name="menu_print">打印</string>
    <string name="prepare_class">备课</string>
    <string name="learning_class">课堂</string>
    <string name="menu_start">上课</string>
    <string name="menu_logout">登出</string>
    <string name="back">返回</string>
    <string name="document_title">学案</string>
    <string name="add_document">新建学案</string>
    <string name="ori_password">输入原密码：</string>
    <string name="new_password">输入新密码：</string>
    <string name="ori_password_wrong">您输入的原密码不正确</string>
    <string name="new_password_wrong">您输入的新密码不一致</string>
    <string name="recheck_password">确认新密码：</string>
    <string name="wrong_answer_book">错题本</string>
    <string name="wrong_answer_question">题目</string>
    <string name="wrong_answer_photo">图片</string>
    <string name="resource_title">资源</string>
    <string name="statistics_title">学情</string>
    <string name="learning_seft">自学</string>
    <string name="menu_server_test">服务器检测</string>
    <string name="write_answer_here">在此填写答案</string>
    <string name="load_doc_failed">学案记载失败，请点击这里重新加载!</string>
    <string name="class_begin">开始上课</string>
    <string name="class_end">下课</string>
    <string name="comma">,</string>
    <string name="dot">.</string>
    <string name="closing_chevron">【</string>
    <string name="opening_chevron">】</string>
    <string name="school_resource">校本资源</string>
    <string name="my_resource">我的收藏</string>
    <string name="public_resource">公共资源</string>
    <string name="knowledge">课时</string>
    <string name="fre_class">课前</string>
    <string name="at_class">课中</string>
    <string name="after_class">课后</string>
    <string name="to_publish">待发布</string>
    <string name="enter_knowledge_name">输入课时名称</string>
    <string name="enter_task_name">请输入任务名称</string>
    <string name="edit">编辑</string>
    <string name="publish">发布</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="delete">删除</string>
    <string name="upload">上传</string>
    <string name="enter">输入</string>
    <string name="ppt">ppt</string>
    <string name="ppt_u">PPT</string>
    <string name="micro_course">微课</string>
    <string name="exercises">习题</string>
    <string name="answers">答案</string>
    <string name="documents">文档</string>
    <string name="photo">图片</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="no2">无</string>
    <string name="check_knowledge">请选择课时</string>
    <string name="no_knowledge">无对应课时</string>
    <string name="add_knowledge">+任务</string>
    <string name="not_publish">待发布</string>
    <string name="hand_up_request">举手提问</string>
    <string name="pre_class_learning">课前学习</string>
    <string name="learning_the_class">上课班级</string>
    <string name="learning_the_date">上课日期</string>
    <string name="learning_the_time">上课时间</string>
    <string name="after_class_learning">课后复习</string>
    <string name="class_record">上课记录</string>
    <string name="learning_record">学习记录</string>
    <string name="toast_crash">程序出错了, 错误报告提交, 我们将尽快修复该问题, 谢谢合作!</string>
    <string name="update_prompt">发现新版本，是否需要更新？</string>
    <string name="check_teacher_list_fail">获取教师列表失败，请重试</string>
    <string name="select_pic_again">文件不存在，请重选</string>
    <string name="no_update_prompt">当前已经是最新版本, 无需更新!</string>
    <string name="start_class_check">请选择您开课的班级</string>
    <string name="adding_task_warning">当前正在添加任务,请先保存!</string>
    <string name="delete_task_warning">删除后不可恢复，确认删除吗？</string>
    <string name="dialog_tile">温馨提示</string>
    <string name="commit_answer">提交答案</string>
    <string name="sync_fre_class">同步至课前</string>
    <string name="sync_in_class">同步至课中</string>
    <string name="sync_after_class">同步至课后</string>
    <string name="publish_sync_fre_class">课前同时发布</string>
    <string name="publish_sync_in_class">课中同时发布</string>
    <string name="publish_sync_after_class">课后同时发布</string>
    <string name="publish_warning">发布后将不可再次修改是否\n确定发布此学案？</string>
    <string name="please_check_knowledge">请选择要同步的知识点</string>
    <string name="delete_knowledge_warning">是否确定删除学案“%s”？</string>
    <string name="class_on_knowledge_warning">课中未发布</string>
    <string name="no_class_records_warning">暂无上课记录</string>
    <string name="no_learning_records_warning">暂无学习记录</string>
    <string name="into_class">进入课堂</string>
    <string name="statics_result">统计结果：</string>
    <string name="login_layout_text">欢迎登陆智慧课堂系统</string>
    <string name="class_exercise_result">课堂练习结果</string>
    <string name="show_right_answers">公布正确答案</string>
    <string name="class_started_warning">%1$s老师正在上课中，请立即进入！</string>
    <string name="class_started">%1$s正在上课</string>
    <string name="insert_resources">插入资源</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_fail">发布失败，请重试</string>
    <string name="sync_success">同步成功</string>
    <string name="sync_fail">同步失败，请重试</string>
    <string name="update_fail">修改失败，请重试</string>
    <string name="upload_fail">上传失败，请重试</string>
    <string name="upload_from_local">从本地选择文件</string>
    <string name="upload_from_resource">从资源库选择文件</string>
    <string name="answer_question">抢答</string>
    <string name="test_study">测学</string>
    <string name="lock_enable">锁屏</string>
    <string name="lock_unable">解锁</string>
    <string name="mute_enable">禁言</string>
    <string name="mute_unable">取消禁言</string>
    <string name="delete_success">删除成功</string>
    <string name="operate_success">操作已完成</string>
    <string name="learn_case_ppt">教案PPT</string>
    <string name="check_no_questions">查询不到题目</string>
    <string name="target_guidance">目标导学</string>
    <string name="self_study">教材自学</string>
    <string name="assist_study">微课助学</string>
    <string name="coopera_study">合作互学</string>
    <string name="class_exercises">课堂练习</string>
    <string name="difficult_break">疑难突破</string>
    <string name="class_summary">课堂总结</string>
    <string name="relevant_info">相关资料</string>
    <string name="my_answer">我的答案： %1$s</string>
    <string name="right_answer">正确答案： %1$s</string>
    <string name="answer_unselect">【 未作答 】</string>
    <string name="answer_right">【 正确 】</string>
    <string name="answer_wrong">【 错误 】</string>
    <string name="collect">收藏</string>
    <string name="check">选用</string>
    <string name="pop_res_lbl">资源库导入</string>
    <string name="pop_local_lbl">本地导入</string>
    <string name="search_hint">查找</string>
    <string name="lbl_all_student">提问所有学生</string>
    <string name="lbl_example_class">难度</string>
    <string name="lbl_analysis">解析</string>
    <string name="check_analysis">查看解析</string>
    <string name="lbl_answer">答案:</string>
    <string name="toast_answer_ok">提交答案成功!</string>
    <string name="toast_answer_all">提交答案前请答完所有题目</string>
    <string name="toast_answer_fail">提交失败!</string>
    <string name="toast_no_chapters">没有找到章节!</string>
    <string name="toast_no_classes">获取班级信息失败!</string>
    <string name="toast_load_fail">加载数据失败!</string>
    <string name="toast_select_topic">请先选择题目</string>
    <string name="toast_select_student">请选择需要参与测评的学生</string>
    <string name="toast_comment_ok">点评成功!</string>
    <string name="toast_select_video">请先选择微课!</string>
    <string name="toast_select_hint">您选择了：</string>
    <string name="toast_no_data">未找到数据</string>
    <string name="toast_read_fail">读取数据失败!</string>
    <string name="toast_task_name_empty">请输入任务名称再点保存</string>
    <string name="toast_file_empty">请先上传文件再点保存</string>
    <string name="toast_add_task_fail">添加任务失败，请稍后重试</string>
    <string name="toast_class_name_empty">请先输入课时名称再添加任务，谢谢</string>
    <string name="toast_receive_two">收到2：</string>
    <string name="toast_raise_quiz">举手提问</string>
    <string name="toast_name_pwd_empty">用户名和密码不能为空!</string>
    <string name="toast_net_timeout">连接超时，请检查服务器是否工作!</string>
    <string name="toast_token_lose">获取用户信息失败, 请重新登录!</string>
    <string name="toast_mark_ok">评分成功!</string>
    <string name="toast_mark_fail">评分失败!</string>
    <string name="toast_video_empty">没有找到相关的微课资源!</string>
    <string name="toast_ing">正在建设中...</string>
    <string name="toast_question_fail">该题未作答或查找回答失败, 无法发起点评!</string>
    <string name="toast_select_class">请先选择班级后再进行操作!</string>
    <string name="toast_wrong_emtpy">没有找到该学生的错题记录!</string>
    <string name="toast_subject_no">没有科目!</string>
    <string name="toast_class_ing">正在上课中...</string>
    <string name="toast_class_no">请先选择班级</string>
    <string name="toast_new_version">检查新版本出错，请稍后重试</string>
    <string name="toast_version_alreay">已安装最新版本</string>
    <string name="toast_version_err">下载新版本出错，请稍后重试</string>
    <string name="toast_pwd_no_fit">输入的密码不一致!</string>
    <string name="toast_pwd_empty">输入的密码不能为空!</string>
    <string name="toast_edit_pwd_fail">密码修改失败!</string>
    <string name="toast_wrong_recod_empty">未获得错题记录!</string>
    <string name="toast_change_ok">成功</string>
    <string name="class_primary">小学</string>
    <string name="class_middle">初中</string>
    <string name="class_senior">高中</string>
    <string name="subject_cn">语文</string>
    <string name="subject_mathematics">数学</string>
    <string name="subject_en">英语</string>
    <string name="subject_music">音乐</string>
    <string name="subject_fine">美术</string>
    <string name="subject_physical">体育</string>
    <string name="subject_information">信息技术</string>
    <string name="subject_synthesize">综合</string>
    <string name="subject_calligraphy">书法</string>
    <string name="subject_science">科学</string>
    <string name="subject_thought">思想品德</string>
    <string name="subject_sw">生物</string>
    <string name="subject_zj">政治</string>
    <string name="subject_wl">物理</string>
    <string name="subject_hx">化学</string>
    <string name="subject_xx">信息</string>
    <string name="subject_ls">历史</string>
    <string name="subject_dl">地理</string>
    <string name="subject_xljk">心理健康</string>
    <string name="subject_ddfz">道德与法制</string>
    <string name="class_one">一年级</string>
    <string name="class_two">二年级</string>
    <string name="class_three">三年级</string>
    <string name="class_four">四年级</string>
    <string name="class_five">五年级</string>
    <string name="class_six">六年级</string>
    <string name="class_middle_one">初一</string>
    <string name="class_middle_two">初二</string>
    <string name="class_middle_three">初三</string>
    <string name="class_hight_one">高一</string>
    <string name="class_hight_two">高二</string>
    <string name="class_hight_three">高三</string>
    <string name="lbl_student_list">学生列表</string>
    <string name="lbl_online">在线</string>
    <string name="lbl_offline">离线</string>
    <string name="lbl_ask">提问</string>
    <string name="lbl_upload_fail">上传失败</string>
    <string name="lbl_exactness">正确</string>
    <string name="lbl_err">错误</string>
    <string name="lbl_un_submit">未提交</string>
    <string name="lbl_class_lesson_tj">【%d人正确, %d人错误, %d人未提交】</string>
    <string name="lbl_di">第</string>
</resources>