<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:paddingBottom="20dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/resource_change_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">
        <TextView
            android:id="@+id/ppt_resource_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ppt_u"
            android:textColor="@color/resource_title_selector"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/micro_course_resource_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/micro_course"
            android:textColor="@color/resource_title_selector"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/question_resource_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exercises"
            android:textColor="@color/resource_title_selector"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/word_resource_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/documents"
            android:textColor="@color/resource_title_selector"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/image_resource_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="@color/resource_title_selector"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/upload_file_resource_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upload_from_local_title"
            android:textColor="@color/group_name"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="@color/title_bar_background" />

    <Spinner
        android:id="@+id/resource_level_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:spinnerMode="dropdown"></Spinner>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="25dp" />

</LinearLayout>