<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_12"
    android:paddingRight="@dimen/dp_32">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/school_resource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/resource_select_title"
            android:enabled="false"
            android:paddingLeft="@dimen/dp_28"
            android:paddingRight="@dimen/dp_28"
            android:paddingTop="@dimen/dp_9"
            android:paddingBottom="@dimen/dp_9"
            android:text="@string/school_resource"/>
        <TextView
            android:id="@+id/public_resource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/resource_select_title"
            android:paddingLeft="@dimen/dp_28"
            android:paddingRight="@dimen/dp_28"
            android:paddingTop="@dimen/dp_9"
            android:paddingBottom="@dimen/dp_9"
            android:text="@string/public_resource"/>
        <TextView
            android:id="@+id/my_resource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/resource_select_title"
            android:paddingLeft="@dimen/dp_28"
            android:paddingRight="@dimen/dp_28"
            android:paddingTop="@dimen/dp_9"
            android:paddingBottom="@dimen/dp_9"
            android:text="@string/my_resource"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_color" />

    <FrameLayout
        android:id="@+id/question_layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_10"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:minHeight="0dp"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_13"
            android:background="@drawable/task_add_cancel_button"/>
        <Button
            android:id="@+id/commit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginLeft="@dimen/dp_36"
            android:textSize="@dimen/text_size_13"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:background="@drawable/task_add_save_button"/>
    </LinearLayout>
</LinearLayout>