<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:layout_weight="7">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/school_resource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/resource_select_title"
                android:paddingLeft="30dp"
                android:enabled="false"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/school_resource"/>
            <TextView
                android:id="@+id/public_resource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/resource_select_title"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/public_resource"/>
            <TextView
                android:id="@+id/my_resource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/resource_select_title"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/my_resource"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/question_layout_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <FrameLayout
            android:id="@+id/student_select_layout_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/cancel"
                android:textColor="@color/button_blue_item_checked"
                android:textSize="18sp"
                android:background="@drawable/task_add_cancel_button"/>
            <Button
                android:id="@+id/commit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:background="@drawable/task_add_save_button"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>